# context-evalver

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: docs.yml
.kiro/plans/: plugin-marketplace-restructure.md
.kiro/specs/initial-development/: design.md  requirements.md  research.md  spec.json  tasks.md
core/: Cargo.toml  README.md
core/src/: confidence_scorer.rs  ingestor.rs  ipc_server.rs  main.rs  signal_extractor.rs  store.rs
core/tests/: integration.rs  smoke.rs
docs/: concepts.md  configuration.md  daily-workflow.md  deployment.md  getting-started.md  index.md  package.json
docs/.vitepress/: config.ts
docs/usage/: context-apply.md  context-audit.md  context-config.md  context-draft.md  context-reset.md  context-status.md
plugin/: README.md  biome.json  package.json  tsconfig.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/src/: config-loader.ts  context-apply.ts  context-audit.ts  context-config.ts  context-draft.ts  context-reset.ts  context-status.ts  event-capture.ts  hook-dispatcher.ts  index.ts  ipc-client.ts  patch-generator.ts
plugin/tests/: config-loader.test.ts  context-apply-git.test.ts  context-apply.test.ts  context-audit-e2e.test.ts  context-config.test.ts  context-draft-apply-lifecycle.test.ts  context-draft.test.ts  context-reset.test.ts  context-status.test.ts  draft-staging.test.ts  event-capture.test.ts  hook-dispatcher.test.ts  hook-per-event.test.ts  hook-session-end.test.ts  ipc-client.test.ts  ipc-perf.test.ts  patch-generator-audit.test.ts  patch-generator-draft.test.ts  plugin-manifest.test.ts  skill-context-apply.test.ts  skill-context-audit.test.ts  skill-context-draft.test.ts  smoke.test.ts
(+6 files in other folders)
