[package]
name = "context-optimizer-core"
version = "0.1.0"
edition = "2024"
description = "Rust core daemon for context-optimizer: SQLite persistence, signal extraction, confidence scoring"

[[bin]]
name = "context-optimizer-core"
path = "src/main.rs"

[dependencies]
rusqlite   = { version = "0.38.0", features = ["bundled"] }
serde      = { version = "1.0",    features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8",  features = ["xxh3"] }
anyhow     = "1.0"
ctrlc      = { version = "3", features = ["termination"] }
dirs-next  = "2.0"
regex      = "1"

[dev-dependencies]
tempfile = "3"
